src/t8_fortran_interface/t8_fortran_interface.h

/** Initialize sc and t8code with SC_MPI_COMM_WORLD communicator
 * and SC_LP_DEFAULT logging.
 * This call is equivalent to
 *   sc_init (comm, 1, 1, NULL, SC_LP_ESSENTIAL);
 *   t8_init (SC_LP_DEFAULT);
 *
 * \param [in] comm The MPI communicator to use.
 */
void                t8_fortran_init_all (sc_MPI_Comm * comm);
/** Commit cmesh. This wraps cmesh_commit in order to use the dereferenced communicator.
*/
void				t8_fortran_cmesh_commit(t8_cmesh_t cmesh, sc_MPI_Comm* comm);
/** Translate a fortran MPI communicator into a C MPI communicator
 * and return a pointer to it.
 * \param [in] Fcomm  Fortran MPI Communicator
 * \return            Pointer to the corrensponding C MPI communicator.
 * \note      This function allocated memory for the new C MPI communicator.
 *            Call \ref t8_fortran_MPI_Comm_delete to free this memory.
 * \note      t8code needs to be configured with MPI support to be able to use
 *            this function.
 */
sc_MPI_Comm        *t8_fortran_MPI_Comm_new (
#if T8_ENABLE_MPI
/** Free the memory of a C MPI Communicator pointer that was created
 *  with \ref t8_fortran_MPI_Comm_new.
 * \param [in] Ccomm  Pointer to a C MPI communicator.
 */
void                t8_fortran_MPI_Comm_delete (sc_MPI_Comm * Ccomm);
t8_cmesh_t          t8_cmesh_new_periodic_tri_wrap (sc_MPI_Comm * Ccomm);
/** Wraps \ref t8_forest_new_uniform with the default scheme as scheme
 * and passes MPI communicator as pointer instead of by value.
 * Build a uniformly refined forest on a coarse mesh.
 * \param [in]      cmesh     A coarse mesh.
 * \param [in]      level     An initial uniform refinement level.
 * \param [in]      do_face_ghost If true, a layer of ghost elements is created for the forest.
 * \param [in]      comm      MPI communicator to use.
 * \return                    A uniform forest with coarse mesh \a cmesh, eclass_scheme
 *                            \a scheme and refinement level \a level.
 */
t8_forest_t         t8_forest_new_uniform_default (t8_cmesh_t cmesh,
                                                   int level,
                                                   int do_face_ghost,
                                                   sc_MPI_Comm * comm);